写好设备，配置，模型的静态页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,79 @@
     <string name="check_result">检测结果</string>
     <string name="album">相册</string>
     <string name="user_center">个人中心</string>
+    <string name="scan_scan">扫一扫</string>
+    <string name="local_server">本地服务器</string>
+    <string name="qc_check_terminal">QC检测终端</string>
+    <string name="no_query_local_server">未查询到本地服务器</string>
+    <string name="no_query_qc_check_terminal">未检测到QC检测终端</string>
+    <string name="local_server_manage">本地服务器管理</string>
+    <string name="model">模型</string>
+    <string name="setting">设置</string>
+    <string name="current_model_version">当前模型版本</string>
+    <string name="new_model_version">最新模型版本</string>
+    <string name="opreate">操作</string>
+    <string name="updata">更新</string>
+    <string name="seq">序号</string>
+    <string name="model_name">模型名称</string>
+    <string name="version">版本</string>
+    <string name="choose_download">选择下载</string>
+    <string name="technology_classify">工艺分类</string>
+    <string name="technology_classify_">工艺分类:</string>
+    <string name="check_part">检测部位</string>
+    <string name="check_object">检测对象</string>
+    <string name="download">下载</string>
+    <string name="local_model_download">本地模型下载</string>
+    <string name="project_count">项目数</string>
+    <string name="technology_type">工艺类型</string>
+    <string name="all_check_count">共计检测</string>
+    <string name="project">项目</string>
+    <string name="good_product_count">良品数</string>
+    <string name="bad_product_count">不良品数</string>
+    <string name="project_name">项目名称</string>
+    <string name="name">名称</string>
+    <string name="defective_rate">不良率</string>
+    <string name="all">共计</string>
+    <string name="project_check_manage">项目检测管理</string>
+    <string name="time">时间</string>
+    <string name="photo">图片</string>
+    <string name="new_version">最新版本</string>
+    <string name="configure_manage">配置管理</string>
+    <string name="terminal_seq">终端编号:</string>
+    <string name="connect_local_server_seq">连接本地服务器编号:</string>
+    <string name="current_use_configure_version">当前使用配置版本:</string>
+    <string name="switch_target_configure_version">切换目标配置版本:</string>
+    <string name="check_project">检测项目</string>
+    <string name="check_type">检测类型</string>
+    <string name="configure_version">配置版本</string>
+    <string name="terminal_switch_configure">终端切换配置</string>
+    <string name="switchs">切换</string>
+    <string name="details">详情</string>
+    <string name="config_name">配置名称:</string>
+    <string name="create_time">创建时间:</string>
+    <string name="version_">版本:</string>
+    <string name="config_detail">配置详情</string>
+    <string name="use">应用</string>
+    <string name="synchronization">同步</string>
+    <string name="device_seq">设备编号:</string>
+    <string name="use_config_">使用配置:</string>
+    <string name="current_count_">当日产量:</string>
+    <string name="all_count_">总产量:</string>
+    <string name="current_bad_count_">当日不良数量:</string>
+    <string name="all_bad_count_">总计不良数量:</string>
+    <string name="config_list">配置列表</string>
+    <string name="device_info">设备信息</string>
+    <string name="server_seq">服务器编号:</string>
+    <string name="connect_terminal_count">连接终端数量:</string>
+    <string name="model_list">模型列表</string>
+    <string name="cureent_version">当前版本</string>
+    <string name="model_name_">模型名称:</string>
+    <string name="current_version_">当前版本:</string>
+    <string name="model_detail">模型详情</string>
+    <string name="device_list">设备列表</string>
+    <string name="terminal_count">终端数量</string>
+    <string name="server_count">服务器数量</string>
+    <string name="check_result_detail">检测结果详情</string>
+    <string name="part">部位</string>
+
+
 </resources>
