--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,66 @@
     <string name="server_count">服务器数量</string>
     <string name="check_result_detail">检测结果详情</string>
     <string name="part">部位</string>
-
-
+    <string name="address_parms">位置参数</string>
+    <string name="please_input">请输入</string>
+    <string name="negative">负公差:</string>
+    <string name="puls">正公差:</string>
+    <string name="please_input_nickname">请输入昵称</string>
+    <string name="please_input_phone">请输入手机号</string>
+    <string name="please_choose_company">请选择公司</string>
+    <string name="register_user">注册账号</string>
+    <string name="register">注册</string>
+    <string name="register_success">注册成功</string>
+    <string name="user_name_no_empty">账号不能为空</string>
+    <string name="password_no_empty">密码不能为空</string>
+    <string name="two_password_input_diffent">两次输入的密码不一致</string>
+    <string name="nickname_no_empty">用户昵称不能为空</string>
+    <string name="phone_no_empty">手机号不能为空</string>
+    <string name="user_manage">账号管理</string>
+    <string name="son_user_manage">子账号管理</string>
+    <string name="phone">手机号码</string>
+    <string name="phone_">手机号码:</string>
+    <string name="back">返回</string>
+    <string name="company_name">公司名称</string>
+    <string name="count_detail">生产详情</string>
+    <string name="about_manufacturer">关于厂商</string>
+    <string name="contact_customer_service">联系客服</string>
+    <string name="user">账号</string>
+    <string name="password_no_right">密码不正确</string>
+    <string name="logout">退出登陆</string>
+    <string name="confirm_logout">确定退出登陆?</string>
+    <string name="confirm">确定</string>
+    <string name="cancel">取消</string>
+    <string name="logout_success">退出成功</string>
+    <string name="name_">姓名:</string>
+    <string name="user_name_">用户名:</string>
+    <string name="company_list">公司列表</string>
+    <string name="company_name_">公司名称:</string>
+    <string name="company_address">公司地址:</string>
+    <string name="sale_status">销售状况</string>
+    <string name="company_status">公司状况</string>
+    <string name="project_check_preview">项目检测结果数据表</string>
+    <string name="device_check_result_preview">设备检测结果数据表</string>
+    <string name="updata_password">修改密码</string>
+    <string name="origin_password">原始密码</string>
+    <string name="please_input_old_password">请输入旧密码</string>
+    <string name="new_password">新密码</string>
+    <string name="please_input_new_password">请输入新密码</string>
+    <string name="confirm_new_password">确认新密码</string>
+    <string name="please_again_input_new_password">请再次输入新密码</string>
+    <string name="updata_password_success">修改密码成功,请重新登陆</string>
+    <string name="nickname">昵称</string>
+    <string name="nickname_not_be_empty">昵称不能为空</string>
+    <string name="phone_not_be_empty">手机号不能为空</string>
+    <string name="updata_success">修改成功</string>
+    <string name="cloth_list">布匹列表</string>
+    <string name="cloth_number_">布匹号:</string>
+    <string name="pot_number_">缸号:</string>
+    <string name="length_">长度:</string>
+    <string name="bad_count_">不良数量:</string>
+    <string name="operate_user_">操作人:</string>
+    <string name="check_part_list">零件不良位置数据表</string>
+    <string name="bad_cloth_detail">不良布匹详情</string>
+    <string name="model_">型号:</string>
+    <string name="bad_product_list">不良品列表</string>
 </resources>
